--- a/seminar_4/Seminar_4_rmd.Rmd
+++ b/seminar_4/Seminar_4_rmd.Rmd
@@ -18,10 +18,13 @@ Az ora celja az adatexploracios modszerek elsajatitasa.
 A kovetkezp package-ekre lesz szuksegunk
 
 ```{r packages, echo=T, results='hide', message=F, warning=F}
+if (!require("gridExtra")) install.packages("gridExtra")
+library(gridExtra) # for grid.arrange
 if (!require("tidyverse")) install.packages("tidyverse")
 library(tidyverse) # for dplyr and ggplot2
 if (!require("psych")) install.packages("psych")
 library(psych) # for describe
+
 ```
 
 ## Adatok betoltese
@@ -142,7 +145,7 @@ orai_adat %>%
   summary()
 ```
 
-Elofordul, hogy egy folytonos valtozot akarunk atalakitani faktorra, pl. elkepzelheto hogy ossze akarjuk hasonlitani azokat akik 6 vagy kevesebb orat alszanak altalaban azokkal akik 7 vagy 8, vagy meg tobb orat alszanak. 
+Elofordul, hogy egy numerikus valtozot akarunk atalakitani faktorra, pl. elkepzelheto hogy ossze akarjuk hasonlitani azokat akik 6 vagy kevesebb orat alszanak altalaban azokkal akik 7 vagy 8, vagy meg tobb orat alszanak. 
 
 ```{r factors recode plot}
 orai_adat %>%
@@ -229,7 +232,7 @@ orai_adat %>%
 *______________________________*
 
 
-```{r pelda megoldas}
+```{r pelda megoldas 1}
 
 orai_adat %>% 
   select(hangulat_1) %>% 
@@ -266,7 +269,7 @@ orai_adat_harmashangulat_1 %>%
 ### egyes valtozok vizualizacioja
 
 Az egyes valtozok grafikonok (plot) segitsegevel is megvizsgalhatok.
-A kategorikus valtozokat gyakran oszlopdiagrammal (geom_bar) abrazoljuk, mig a folytonos valtozokat inkabb histogram vagy density plot segitsegevel szoktuk abrazolni.
+A kategorikus valtozokat gyakran oszlopdiagrammal (geom_bar) abrazoljuk, mig a numerikus valtozokat inkabb dotplot , histogram, vagy density plot segitsegevel szoktuk abrazolni.
 
 Az egyes valtozok vizualizacioja es a leiro statisztikak atvizsgalasa elengedhetetlen hogy azonositsuk az esetleges adatbeviteli hibakat es egyeb nemvart furcsasagokat az adataink kozott.
 
@@ -279,10 +282,17 @@ ggplot() +
   aes(x = memoriateszt_hely) +
   geom_bar()
 
+
+orai_adat %>%
+ggplot() +
+  aes(x = cipomeret) +
+  geom_dotplot()
+
 orai_adat %>%
 ggplot() +
   aes(x = cipomeret) +
   geom_histogram()
+
 
 orai_adat %>%
 ggplot() +
@@ -298,8 +308,10 @@ ggplot() +
 Hasznald a fent tanult modszereket, hogy azonositsd az orai_adat adattablaban levo hibakat vagy nem vart furcsasagokat.
 
 - A vizualizacion tul a View(), describe(), es summary() funciokat erdemes hasznalni az adatok elso attekintesere 
-- A folytonos valtozoknal vizsgald meg a minimum es maximum erteket es a hianyzo adatok mennyiseget, valamint az eloszlast.
+- A numerikus (vagy eppen folytonos) valtozoknal vizsgald meg a minimum es maximum erteket es a hianyzo adatok mennyiseget, valamint az eloszlast.
 - A kategorikus valtozoknal vizsgald meg az osszes faktorszintet es az egyes szintekhez tartozo megfigyelesek mennyiseget.
+
+*______________________________*
 
 
 ```{r pelda megoldas 2, message=F, warning=F}
@@ -337,43 +349,593 @@ orai_adat %>%
 ```
 
 A hibakat a kovetkezokeppen javithatjuk.
-A filter() funkcioval kivalaszthatjuk a kerdeses esetet es valtozot, majd a mutate() funkcioval azt az egy erteket megvaltoztathatjuk. Azt, hogy ilyenkor hianyzo adatra, vagy egy masik, valoszinu ertekre kell megvaltoztatni az erteket, a szituaciotol fogg. Altalaban a biztosabb megoldas ha hianyzo adatnak jeloljuk a kerdeses erteket (NA), de ez sok adatveszteshez vezethet. Ha eleg valszinu hogy mi a helyes valasz, beirhatjuk. 
 
-Minden javitast fel kell tuntetni a kutatasi jelentesben (es a ZH soran is), hogy az olvaso szamara tiszta legyen, hogy itt egy adathelyettesites vagy kizaras tortent.
+A mutate() es a replace() funkciok hasznalataval cserelhetunk ki ertekeket mas ertekekre. Azt, hogy ilyenkor hianyzo adatra (NA), vagy egy masik, valoszinu ertekre kell megvaltoztatni az erteket, a szituaciotol fogg. Altalaban a biztosabb megoldas ha hianyzo adatnak jeloljuk a kerdeses erteket (NA), de ez sok adatveszteshez vezethet. Ha eleg valszinu hogy mi a helyes valasz, beirhatjuk, DE minden javitast fel kell tuntetni a kutatasi jelentesben (es a ZH soran is), hogy az olvaso szamara tiszta legyen, hogy itt egy adathelyettesites vagy kizaras tortent!
+
+Mindig erdemes a javitott adatokat uj adattablaba elmenteni. A mi esetunkben az orai_adat_corrected nevet adtuk a javitott objektumnak. Igy a nyers adataink megmaradnak, ami hasznos lehet kesobbi muveleteknel.
 
 
+```{r data correction, message=F, warning=F}
 
-```{r pelda megoldas correction, message=F, warning=F}
 orai_adat_corrected = orai_adat %>%
-  filter(szocmedia_3 == "youtube") %>% 
-  mutate(szocmedia_3 = NA)
+  mutate(szocmedia_3 = replace(szocmedia_3,  szocmedia_3=="youtube", NA))
 
 orai_adat_corrected = orai_adat_corrected %>%
-  filter(magassag == 1.82) %>% 
-  mutate(magassag = 182)
+  mutate(magassag = replace(magassag,  magassag == 1.82, 182))
 
 orai_adat_corrected = orai_adat_corrected %>%
-  filter(cipomeret == 47) %>% 
-  mutate(cipomeret = 37)
+  mutate(cipomeret = replace(cipomeret, cipomeret == 47, 37))
 
 ```
 
-*______________________________*
+Erdemes megbizonyosodni rola, hogy az adatcsere sikeres volt. Alabb az adatok vizualizaciojaval gyozodunk meg errol, de az adatok megjelenitesevel, vagy a leiro statisztikak lekerdezesevel is megteheto ez, ha az informativ.
+
+```{r data correction check, message=F, warning=F}
+# hasznalhatnak meg az alabbiakat is arra, hogy megbizonyosodjunk abban, hogy sikeres volt a csere
+# View(orai_adat_corrected)
+# describe(orai_adat_corrected)
+# summary(orai_adat_corrected$szocmedia_3)
+# orai_adat_corrected$szocmedia_3
+
+old_plot_szocmedia_3 <-
+  orai_adat %>% 
+  ggplot()+
+    aes(x = szocmedia_3)+
+    geom_bar()
+
+new_plot_szocmedia_3 <-
+  orai_adat_corrected %>% 
+  ggplot()+
+    aes(x = szocmedia_3)+
+    geom_bar()
+
+grid.arrange(old_plot_szocmedia_3, new_plot_szocmedia_3, ncol=2)
+
+old_plot_magassag <-
+  orai_adat %>% 
+  ggplot()+
+    aes(x = magassag)+
+    geom_histogram()
+
+new_plot_magassag <-
+  orai_adat_corrected %>% 
+  ggplot()+
+    aes(x = magassag)+
+    geom_histogram()
+
+
+grid.arrange(old_plot_magassag, new_plot_magassag, ncol=2)
+
+
+old_plot_cipomeret <-
+  orai_adat %>%
+  filter(magassag>2) %>% 
+  ggplot()+
+    aes(x = cipomeret, y = magassag)+
+    geom_point() +
+    geom_smooth()
+
+new_plot_cipomeret <-
+  orai_adat_corrected %>%
+  filter(magassag>2) %>% 
+  ggplot()+
+    aes(x = cipomeret, y = magassag)+
+    geom_point() +
+    geom_smooth()
+
+grid.arrange(old_plot_cipomeret, new_plot_cipomeret, ncol=2)
+
+```
+
+
 
 
 ## Tobb valtozo kapcsolatanak felterkepezese
 
 
-Tobb valtozo kapcsolatat is felterkepezhetjuk abrak segitsegevel
+Tobb valtozo kapcsolatat is felterkepezhetjuk tablazatok es abrak segitsegevel.
 
-```{r plot multiple variables}
-orai_adat %>%
-ggplot() +
-  aes(x = memoriateszt_hely, y = magassag) +
-  geom_boxplot()
+### Ket kategorikus (csoportosito) valtozo kapcsolatanak felterkepezese
+
+
+Az elso oran jelentett hangulat_1 valtozobol csinalunk egy kategorikus valtozot, az faktorszintek a kovetkezok lesznek: 0-3 - "rossz", 4-6 - "kozepes", 7-10 - "jo". Ezt ugyan abba az adattablaba hangulat_kat_1 neven mentjuk el sorrendezett factorkent a fent tanultak alapjan. Mindehez a mutate(), recode(), es factor() funkciokat hasznaljuk.
+
+```{r two categorical variable plots 1}
+
+orai_adat_corrected %>% 
+  select(hangulat_1) %>% 
+  summary()
+
+orai_adat_corrected <- orai_adat_corrected %>% 
+  mutate(hangulat_kat_1 = factor(recode(hangulat_1,
+                                 "0" = "rossz",
+                                 "1" = "rossz",
+                                 "2" = "rossz",
+                                 "3" = "rossz",
+                                 "4" = "kozepes",
+                                 "5" = "kozepes",
+                                 "6" = "kozepes",
+                                 "7" = "jo",
+                                 "8" = "jo",
+                                 "9" = "jo",
+                                 "10" = "jo"
+                                 ), ordered = T, levels = c("rossz", "kozepes", "jo")))
+  
+orai_adat_corrected %>% 
+  select(hangulat_kat_1) %>% 
+  summary
 
 ```
 
+Hasonlokeppen kepzunk szocmedia_1 valtozobol egy kategorikus valtozot, ahol azok akik 0 vagy 1 orat hasznaljak a szocialis mediat, a "nem rendszeres", azok akik 2 vagy tobb orat hasznaljak a szocialis mediat, a "nem rendszeres" kategoriaba (faktorszintre) esnek majd.
+Itt nem szukseges az ordered = T es a levels = beallitasa, mert csak ket faktorszint van, es az ABC sorrend mar alapbol az intuitiv modon a "nem rendszeres" kategoriat teszi elsonek.
+
+```{r two categorical variable plots 2}
+table(orai_adat_corrected$szocmedia_1)
+
+orai_adat_corrected <- orai_adat_corrected %>% 
+  mutate(szocmedia_kat_1 = factor(recode(szocmedia_1,
+                                 "0" = "nem rendszeres",
+                                 "1" = "nem rendszeres",
+                                 "2" = "rendszeres",
+                                 "3" = "rendszeres",
+                                 "4" = "rendszeres",
+                                 "5" = "rendszeres",
+                                 "6" = "rendszeres"
+                                 )))
+  
+orai_adat_corrected %>% 
+  select(szocmedia_kat_1) %>% 
+  summary
+
+
+```
+
+
+Az elso oran kertunk egy tippet arrol, hogy az egyes emberek milyen jegyet fognak kapni a kurzus vegen az adatelemzes oran. Mivel itt szamban kertuk a valaszt, ez jelenleg egy numerikus valtozo, de csinaljunk most belole egy kategorikus valtozot, mert osszesen harom fajta tipp erkezett: 3 - "kozepes", 4 - "jo", 5 - "kivalo"
+
+```{r two categorical variable plots 3}
+table(orai_adat_corrected$jegy_tipp)
+
+orai_adat_corrected <- orai_adat_corrected %>% 
+  mutate(jegy_tipp_kat = factor(recode(jegy_tipp,
+                                 "3" = "kozepes (3)",
+                                 "4" = "jo (4)",
+                                 "5" = "kivalo (5)"
+                                 ), ordered = T, levels = c("kozepes (3)", "jo (4)", "kivalo (5)")))
+  
+orai_adat_corrected %>% 
+  select(jegy_tipp_kat) %>% 
+  summary()
+
+
+```
+
+
+
+Most vizsgaljuk meg azt, hogy az, hogy az emberek mennyit alszanak altalaban hogyan fugg ossze azzal, hogy mennyit hasznaljak a szocialis mediat.
+
+
+A legegyszerubb modja ket csoportosito valtozo kapcsolatanak megvizsgalasara a ket valtozo kereszt-tablazatanak (crosstab) elkezsitese a table() funkcioval.
+
+
+```{r two categorical variable 1}
+
+table(orai_adat_corrected$alvas_altalaban_kat_1, orai_adat_corrected$szocmedia_kat_1)
+
+```
+
+
+Sokszor ennel sokkal szemleletesebb az abrak (plot) hasznalata.
+
+Erre az egyik lehetoseg a stacked bar chart (egymasra tornyozott oszlopdiagram, a geom_bar() geomot hasznaljuk) hasznalata. Itt az egyik valtozo kategoriai adjak meg hany oszlop lesz (ez a valtozo lesz az x tengelyen reprezentalva, igy ezt az "x =" reszen adhatjuk meg), a masik valtozo az oszlopokat szinekkel szegmentalja, ezt pedig a "fill =" reszen adhatjuk meg. 
+
+
+```{r two categorical variable plots 4}
+
+orai_adat_corrected %>%
+ggplot() +
+  aes(x = alvas_altalaban_kat_1, fill = szocmedia_kat_1) +
+  geom_bar()
+
+```
+
+Ha az egyes faktorszinteken nagyon kulonbozo mennyisegu megfigyeles van, ez a megjelenites neha felrevezeto kovetkeztetesekhez vezethet, igy neha hasznosabb ha az oszlopok nem szamossagot (count), hanem reszaranyt (proportion) jelolnek. Ha ezt szeretnenk, ahelyett hogy uresen hagynank a geom_bar() funkciot, a kovetkezot adjuk meg: geom_bar(position = "fill").
+
+```{r two categorical variable plots 5}
+
+orai_adat_corrected %>%
+ggplot() +
+  aes(x = alvas_altalaban_kat_1, fill = szocmedia_kat_1) +
+  geom_bar(position = "fill")
+
+```
+
+
+
+*______________________________* 
+
+### Gyakorlas
+
+Hasznald a fent tanult modszereket, hogy megvizsgald a jegy_tipp_kat es a hangulat_kat_1 valtozok kozotti osszefuggest.
+- hasznalj geom_bar() geomot a megjeleniteshez
+- probald meg mind a szamossagot, mind a reszaranyt kifejezo abrat megvizsgalni geom_bar(position = "fill")
+- milyen kovetkeztetest tudsz levonni az abrakrol?
+
+
+*______________________________*
+
+
+```{r megoldas 3}
+
+# az y tengelyen megvaltoztathatjuk a beosztast a scale_y_continuous(breaks = c(...))) funkcio hozzaadasaval 
+
+jegy_tipp_kat_hangulat_kat_plot_1 <-
+orai_adat_corrected %>%
+ggplot() +
+  aes(x = jegy_tipp_kat, fill = hangulat_kat_1) +
+  geom_bar() +
+  scale_y_continuous(breaks = c(2, 4, 6, 8, 10, 12))
+
+jegy_tipp_kat_hangulat_kat_plot_2 <-
+orai_adat_corrected %>%
+ggplot() +
+  aes(x = jegy_tipp_kat, fill = hangulat_kat_1) +
+  geom_bar(position = "fill")
+
+grid.arrange(jegy_tipp_kat_hangulat_kat_plot_1, jegy_tipp_kat_hangulat_kat_plot_2, nrow = 2)
+
+```
+
+
+
+
+Ennel a megjelenitesnel fontos hogy ha az egyes megfigyelesek keves megfigyelesbol allnak, az abra megteveszto lehet, mert az abra nem jelzi a megfigyelesek szamat es igy azt, hogy milyen biztosak lehetunk az eredmenyben. Ilyen esetekben az egyik kategoriat ki lehet venni az abrarol, vagy a szmossagot es a reszaranyt abrazolo abrakat egymas mellet lehet bemutatni, hogy igy kiegeszitsek egymast. Ehhez hasznalhatjuk a grid.arrange() funkciot.
+
+```{r two categorical variables 3 }
+alvas_altalaban_szocmedia_plot_1 <- 
+orai_adat_corrected %>%
+ggplot() +
+  aes(x = alvas_altalaban_kat_1, fill = szocmedia_kat_1) +
+  geom_bar()
+
+alvas_altalaban_szocmedia_plot_2 <- 
+orai_adat_corrected %>%
+ggplot() +
+  aes(x = alvas_altalaban_kat_1, fill = szocmedia_kat_1) +
+  geom_bar(position = "fill")
+
+grid.arrange(alvas_altalaban_szocmedia_plot_1, alvas_altalaban_szocmedia_plot_2, nrow=2)
+
+```
+
+
+Az abra interpretalhatosaga attol fuggen is valtozhat, hogy melyik valtozot tesszuk az x-tengelyre es melyiket szinkent abrazolva.
+
+
+```{r two categorical variables 4}
+
+
+alvas_altalaban_szocmedia_plot_3 <- 
+orai_adat_corrected %>%
+ggplot() +
+  aes(x = szocmedia_kat_1, fill = alvas_altalaban_kat_1) +
+  geom_bar()
+  
+
+alvas_altalaban_szocmedia_plot_4 <- 
+orai_adat_corrected %>%
+ggplot() +
+  aes(x = szocmedia_kat_1, fill = alvas_altalaban_kat_1) +
+  geom_bar(position = "fill")
+
+grid.arrange(alvas_altalaban_szocmedia_plot_3, alvas_altalaban_szocmedia_plot_4, ncol=2)
+
+
+
+# a theme(legend.position) es a guides() funciok hasznalataval kontrollalhatjuk hogy hol es hogyan jelenjen meg a jelmagyarazat az abran
+
+alvas_altalaban_szocmedia_plot_3 <- 
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = szocmedia_kat_1, fill = alvas_altalaban_kat_1) +
+    geom_bar() +
+    theme(legend.position="bottom") +
+    guides(fill = guide_legend(title.position = "bottom"))
+  
+
+alvas_altalaban_szocmedia_plot_4 <- 
+orai_adat_corrected %>%
+  ggplot() +
+  aes(x = szocmedia_kat_1, fill = alvas_altalaban_kat_1) +
+  geom_bar(position = "fill") +
+  theme(legend.position="bottom") +
+  guides(fill = guide_legend(title.position = "bottom"))
+
+grid.arrange(alvas_altalaban_szocmedia_plot_3, alvas_altalaban_szocmedia_plot_4, ncol=2)
+
+```
+
+
+Ujabb modja a barchar segitsegevel valo megjelenitesnek ha az oszlopok nem egymasra tornyozva, hanem egymas mellett jelennek meg, vagy ha a masodik valtozo szerint kulon paneleken (facet) jelennek meg.
+
+```{r two categorical variables 5 }
+
+alvas_altalaban_szocmedia_plot_1 <- 
+orai_adat_corrected %>%
+ggplot() +
+  aes(x = alvas_altalaban_kat_1, fill = szocmedia_kat_1) +
+  geom_bar(position = "dodge")
+
+alvas_altalaban_szocmedia_plot_2 <- 
+orai_adat_corrected %>%
+ggplot() +
+  aes(x = szocmedia_kat_1) +
+  geom_bar() +
+  facet_wrap(~ alvas_altalaban_kat_1)
+
+grid.arrange(alvas_altalaban_szocmedia_plot_1, alvas_altalaban_szocmedia_plot_2, nrow=2)
+
+```
+
+
+
+### Egy kategorikus es egy numerikus valtozo kapcsolata
+
+Vizsgaljuk meg a magassag osszefuggeset azzal, hogy ez emberek mit tippeltek, milyen jegyet fognak kapni az elso oran.
+
+Ezt megtehetjuk az atlagok csoportonkenti attekintesevel a group_by() es a summarize(mean()) segitsegevel. 
+
+```{r categorical vs numeric}
+orai_adat_corrected %>%
+  group_by(jegy_tipp_kat) %>% 
+    summarize(mean = mean(magassag))
+  
+```
+
+
+A ket valtozo kapcsolatat megvizsgalhatjuk abrakkal is. Pl. hasznalhatjuk a 
+
+- facet_wrap() fuggvenyt a egy geom_histogram() vagy geom_dotplot() -al kobinalva
+- a geom_boxplot() -ot
+- esetleg hasznalhatunk egy egymasra illesztett geom_density() plot-ot. 
+- talan ebben az esetben a legtisztabb kepet a geom_violin() mutatja, ami a geom_boxplot() es a geom_density() keverekenek tekintheto. Ezt kiegeszithetunk egy geom_point() -al, hogy pontosan latsszon, hany megfigyelesen alapulnak az abra adatai.
+
+Mindig erdemes tobb megkozelitest is hasznalni az adat-exploracio kozben, hogy minel reszletesebb kepet kaphassunk, es csokkentsuk a valoszinuseget hogy egyik vagy masik megkozelites hianyossagai felrevezetnek minket.
+
+
+
+
+```{r categorical vs numeric plot 1.1}
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = magassag) +
+    geom_histogram() +
+    facet_wrap(~ jegy_tipp_kat)
+```
+
+```{r categorical vs numeric plot 1.2}
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = magassag) +
+    geom_dotplot() +
+    facet_wrap(~ jegy_tipp_kat)
+
+```
+
+```{r categorical vs numeric plot 1.3}
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = jegy_tipp_kat, y = magassag) +
+    geom_boxplot()
+
+```
+
+
+```{r categorical vs numeric plot 1.5}
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = jegy_tipp_kat, y = magassag) +
+    geom_violin() +
+    geom_point()
+```
+
+
+```{r categorical vs numeric plot 1}
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = magassag) +
+    geom_histogram() +
+    facet_wrap(~ jegy_tipp_kat)
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = magassag) +
+    geom_dotplot() +
+    facet_wrap(~ jegy_tipp_kat)
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = jegy_tipp_kat, y = magassag) +
+    geom_boxplot()
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = magassag, fill = jegy_tipp_kat) +
+    geom_density(alpha = 0.3)
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = jegy_tipp_kat, y = magassag) +
+    geom_violin() +
+    geom_point()
+```
+A fenti abran latszik, hogy bar az atlagok a fenti tablazatban kulonboztek, a maguknak kivalo pontot josolok tobbsege 170 cm koruli, de van ket kiurgo magassagu szemely, aki az atlagot felhuzza ebben a csoportban.
+
+
+Az is elkepzelheto hogy egy nemi hatast latunk az eredmenyekben, hiszen a ferfiak magasabbak, es elkepzelheto, hogy nagyobb az adatelemzessel kapcsolatos onbizalmuk is. Probaljuk meg a ferfiakra es a nokre kulon elkesziteni az abrat.
+
+Itt mar harom valtozo kapcsolatat abrazoljuk, amihez a facet_grid() funkciot lehet hasznalni, vagy kulonbozo esztetikai elemeket (aes()) lehet a kulonbozo valtozokhoz rendelni.
+
+
+kkal tehetjuk meg az alabbi modon, vagy 
+
+```{r categorical vs numeric plot 3}
+
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = magassag) +
+    geom_density() +
+    facet_grid(jegy_tipp_kat ~ nem)
+
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = magassag, fill = jegy_tipp_kat, size = nem, lty = nem) +
+    geom_density(alpha = 0.3)
+
+
+```
+
+
+Ha szeretnenk kizarni az elemzesunkbol ezeket az extrem ertekekt, a filter() funkcio beekelesevel a pipe-ba megepithetjuk a fenti abrankat es tablazatokat ugy, hogy csak a 185 cm-nel alacsonyabb emberekre fogkuszalunk.
+
+Igy mar eltunik a korabbi atlagok kozotti kulonbseg.  
+
+
+```{r categorical vs numeric plot 2}
+
+orai_adat_corrected %>%
+  filter(magassag < 185) %>% 
+    ggplot() +
+      aes(x = jegy_tipp_kat, y = magassag) +
+      geom_violin() +
+      geom_point()
+
+orai_adat_corrected %>%
+  filter(magassag < 185) %>% 
+    group_by(jegy_tipp_kat) %>% 
+      summarize(mean = mean(magassag))
+
+```
+
+
+
+
+
+
+
+*______________________________* 
+
+### Gyakorlas
+
+Hasznald a fent tanult modszereket, hogy megvizsgald a jegy_tipp_kat es a hangulat_1 valtozok kozotti osszefuggest.
+
+- hasznald a fenti geomokat, es keszits legalabb ket kulonbozo abrat mas-mas geomokkal
+
+
+*______________________________*
+
+
+```{r megoldas 4}
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = hangulat_1) +
+    geom_dotplot(aes(fill = jegy_tipp_kat), position = "dodge")
+
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = hangulat_1, fill = jegy_tipp_kat) +
+    geom_density(alpha = 0.3)
+
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = jegy_tipp_kat, y = hangulat_1) +
+    geom_violin() +
+    geom_jitter(width = 0.2)
+
+  
+```
+
+
+### Ket numerikus valtozo kapcsolata
+
+Ket numerikus valtozo kozotti kapcsolat jellemzesere altalaban a korrelacios egyutthatot szoktuk hasznalni (cor()).
+A cor() funkciot akar tobb mint ket valtozo paronkenti korrelaciojanak meghatarozasara is lehet hasznalni.
+
+A drop_na() funkcioval kiejthetjuk azokat a megfigyeleseket, ahol a valtozok barmelyikeben hianyzo adat (NA) van. Ha ezt nem tesszuk meg, a cor() fuggveny NA eredmenyt adhna ha valamelyik valtozoban NA-val talalkozik.
+
+
+```{r two numerical variables}
+
+
+orai_adat_corrected %>%
+  select(c(alvas_tegnap_1, alvas_tegnap_3)) %>% 
+    drop_na() %>% 
+      cor()
+
+
+orai_adat_corrected %>%
+  select(c(alvas_altalaban_1, alvas_tegnap_1, alvas_tegnap_3)) %>% 
+    drop_na() %>% # 
+    cor()
+
+```
+
+
+A numerikus valtozok kozotti kapcsolatot altalaban pont diagrammal szoktuk abrazolni (geom_point())
+
+A geom_smooth() layer hozzaadasaval kaphatunk a pontok kozott meghuzodo trendrol egy kepet. A kek vonal az ugyevezett trandvonal, a szurke sav a konfidencia intervallum. Ezekrol kesobb meg reszletesebben beszelunk majd
+
+
+```{r two numerical variables plot 1}
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = alvas_tegnap_1, y = alvas_tegnap_3) +
+    geom_point()
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = alvas_tegnap_1, y = alvas_tegnap_3) +
+    geom_point() +
+    geom_smooth() 
+```
+
+*______________________________* 
+
+### Gyakorlas
+
+Milyen eros a kapcsolat a magassag es a cipomeret kozott?
+
+- hatarozd meg a korrelacios egyutthatot a *magassag* es *cipomeret* valtozok kozott
+- abrazold a *magassag* es *cipomeret* valtozok kapcsolatat
+
+
+*______________________________*
+
+```{r megoldas 5}
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = alvas_tegnap_1, y = alvas_tegnap_3) +
+    geom_point()
+
+orai_adat_corrected %>%
+  ggplot() +
+    aes(x = alvas_tegnap_1, y = alvas_tegnap_3) +
+    geom_point() +
+    geom_smooth() 
+```
 
 
 
@@ -382,7 +944,24 @@ ggplot() +
 
 # Hazi feladat
 
+- Olvasd be az adatokat errol az URL-rol (ez egy .csv file):
 
+"https://raw.githubusercontent.com/kekecsz/PSZB17-210-Data-analysis-seminar/master/seminar_4/Orai_kerdoives_adatok%20-%20ora_1_3.csv"
+
+- Vegezd el az adattisztitast a kovetkezo koddal:
+
+```{r data correction, message=F, warning=F}
+
+orai_adat_corrected = orai_adat %>%
+  mutate(szocmedia_3 = replace(szocmedia_3,  szocmedia_3=="youtube", NA))
+
+orai_adat_corrected = orai_adat_corrected %>%
+  mutate(magassag = replace(magassag,  magassag == 1.82, 182))
+
+orai_adat_corrected = orai_adat_corrected %>%
+  mutate(cipomeret = replace(cipomeret, cipomeret == 47, 37))
+
+```
 
 - Hatarozd meg az elso orai hangulat atlagat (*hangulat_1* valotzo).
 
@@ -402,7 +981,40 @@ ggplot() +
 - Nezd meg a faktor szintjeit, hogy valoban helyes sorrendben szerepelnek-e
 
 
-- Keszits egy ujabb adat objektumot, amiben nincsenek benne a rossz hangulatuak (mondjuk a filter() segitsegevel), mondjuk legyen a neve *orai_adat_harmashangulat_1_rossznelkul*
+- Keszits egy ujabb adat objektumot, amiben nincsenek benne a "rossz" hangulatuak (mondjuk a filter() segitsegevel), mondjuk legyen a neve *orai_adat_harmashangulat_1_rossznelkul*
 
 
 - Ejtsd a nem hasznalt faktorszinteket (a droplevels() funkcioval). (Ird felul a *orai_adat_harmashangulat_1_rossznelkul$hangulat_kat_1* korabbi valtozatat ezzel az modositott valatozoval, ahol mar nincsenek meg a felesleges szintek)
+
+
+- Terjunk vissza a *orai_adat_harmashangulat_1* (amiben a rossz hangulatuak is benne vannak). Most a *hangulat_kat_1* valtozo es a *valasztott_szam* valtozo kapcsolatat vizsgaljuk majd. Eloszor is jelenitsd meg hogy a *hangulat_kat_1* egyes kategoriaiban atlagosna mekkora szamot valasztottak az emberek (*valasztott_szam* valtozo).
+
+- Ez utan abrazold a hangulat *hangulat_kat_1* es a *valasztott_szam* valtozok kapcsolatat abrakon. Rajzolj legalabb ket abrat amin mas geomokat hasznalsz.
+
+- Milyen a kapcsolat az elso orai es a harmadik orai hangulat kozott (*hangulat_1* es *hangulat_3* valtozok? Hatarozd mega korrelacios egyutthatot a ket valtozo kozott.
+
+- Abrazold a *hangulat_1* es *hangulat_3* valtozok kozotti kapcsolatot egy abraval.
+
+
+
+```{r hazi megoldas}
+
+orai_adat_corrected %>%
+  filter(hangulat_kat_1 != "rossz") %>% 
+    ggplot() +
+      aes(x = hangulat_kat_1, y = valasztott_szam) +
+      geom_boxplot()
+
+orai_adat_corrected %>%
+    ggplot() +
+      aes(x = hangulat_kat_1, y = valasztott_szam) +
+      geom_boxplot()
+
+orai_adat_corrected %>%
+    ggplot() +
+      aes(x = valasztott_szam, fill = hangulat_kat_1) +
+      geom_density(alpha = 0.3)
+
+
+
+```
